Fix nav dropdown on IE8

--- a/sections/navbar/style.less
+++ b/sections/navbar/style.less
@@ -494,7 +494,7 @@ span.navbar-title {
 	  height: auto;
 	}
 
-	.nav-collapse{height:auto;} // IE8 FIx
+	.nav-collapse{height:auto;overflow: visible;} // IE8 FIx
 
 /* Responsive Handling
  ************************************************************/
